fix: land final whole-branch review findings
Correctness:
- Reducer answers every still-pending tool call when the error breaker trips,
  so a failed session never leaves dangling tool_use blocks a provider rejects.
- New user input resets consecutiveErrors; a human turn is not part of the
  previous error streak.
- A turn ending in MAX_TOKENS fails the session rather than reporting COMPLETE;
  compaction is deferred, so overflow fails loudly.
- InProcessEngine.run publishes progress into a holder and saves it in a
  finally, so a mid-turn failure no longer discards the whole turn.
- Capability negotiation is reachable: AgentConfig carries the requested set,
  Nessy.Builder.capabilities(...) sets it, and requestFor passes it through.

Hardening:
- ToolCall validates its id and name; pending-call removal drops only the
  first match rather than every duplicate id.
- ScriptedModelProvider refuses a second iteration of one stream, and
  requests() returns a snapshot.
- Uniform null/blank/positive guards on the public records that cross a seam.
- Effect.CALL_MODEL and Decision.ALLOW removed in favour of the factories.
- MapToolRegistry computes its tool specs once instead of per round-trip.
- InMemorySessionStore.save documents its last-write-wins semantics.

Build and docs:
- The live test group exclusion is parameterized as nessy.excludedGroups, so
  ./mvnw test -Dnessy.excludedGroups= actually runs live tests.
- README uses ./mvnw and ships an example that compiles against what exists.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>